--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11070,7 +11070,8 @@ body {
     height: auto;
     min-height: 35rem;
     padding: 5rem 0;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/bg-take-masthead.jpeg");
+    /*background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/bg-take-masthead.jpeg");*/
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/bg-masthead-2.jpg");
     background-color: rgb(10 8 4);
     background-position: center;
     background-repeat: no-repeat;
