--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -77,7 +77,7 @@
     --bs-border-radius-xl: 1rem;
     --bs-border-radius-2xl: 2rem;
     --bs-border-radius-pill: 50rem;
-    --bs-link-color: #a16468;
+    --bs-link-color: #343a40;
     --bs-link-hover-color: #50817e;
     --bs-code-color: #d63384;
     --bs-highlight-bg: #faf4e0;
@@ -2849,8 +2849,8 @@ textarea.form-control-lg {
 
 .btn-primary {
     --bs-btn-color: #fff;
-    --bs-btn-bg: #a16468;
-    --bs-btn-border-color: #a16468;
+    --bs-btn-bg: #343a40;
+    --bs-btn-border-color: #343a40;
     --bs-btn-hover-color: #fff;
     --bs-btn-hover-bg: #558985;
     --bs-btn-hover-border-color: #50817e;
@@ -2860,8 +2860,8 @@ textarea.form-control-lg {
     --bs-btn-active-border-color: #4b7976;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --bs-btn-disabled-color: #fff;
-    --bs-btn-disabled-bg: #a16468;
-    --bs-btn-disabled-border-color: #a16468;
+    --bs-btn-disabled-bg: #343a40;
+    --bs-btn-disabled-border-color: #343a40;
 }
 
 .btn-secondary {
@@ -3018,19 +3018,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-    --bs-btn-color: #a16468;
-    --bs-btn-border-color: #a16468;
+    --bs-btn-color: #343a40;
+    --bs-btn-border-color: #343a40;
     --bs-btn-hover-color: #fff;
-    --bs-btn-hover-bg: #a16468;
-    --bs-btn-hover-border-color: #a16468;
+    --bs-btn-hover-bg: #343a40;
+    --bs-btn-hover-border-color: #343a40;
     --bs-btn-focus-shadow-rgb: 100, 161, 157;
     --bs-btn-active-color: #fff;
-    --bs-btn-active-bg: #a16468;
-    --bs-btn-active-border-color: #a16468;
+    --bs-btn-active-bg: #343a40;
+    --bs-btn-active-border-color: #343a40;
     --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-    --bs-btn-disabled-color: #a16468;
+    --bs-btn-disabled-color: #343a40;
     --bs-btn-disabled-bg: transparent;
-    --bs-btn-disabled-border-color: #a16468;
+    --bs-btn-disabled-border-color: #343a40;
     --bs-gradient: none;
 }
 
@@ -3306,7 +3306,7 @@ textarea.form-control-lg {
     --bs-dropdown-link-hover-color: #1e2125;
     --bs-dropdown-link-hover-bg: #e9ecef;
     --bs-dropdown-link-active-color: #fff;
-    --bs-dropdown-link-active-bg: #a16468;
+    --bs-dropdown-link-active-bg: #343a40;
     --bs-dropdown-link-disabled-color: #adb5bd;
     --bs-dropdown-item-padding-x: 1rem;
     --bs-dropdown-item-padding-y: 0.25rem;
@@ -3571,7 +3571,7 @@ textarea.form-control-lg {
     --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
     --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
     --bs-dropdown-link-active-color: #fff;
-    --bs-dropdown-link-active-bg: #a16468;
+    --bs-dropdown-link-active-bg: #343a40;
     --bs-dropdown-link-disabled-color: #adb5bd;
     --bs-dropdown-header-color: #adb5bd;
 }
@@ -3754,7 +3754,7 @@ textarea.form-control-lg {
 .nav-pills {
     --bs-nav-pills-border-radius: 0.375rem;
     --bs-nav-pills-link-active-color: #fff;
-    --bs-nav-pills-link-active-bg: #a16468;
+    --bs-nav-pills-link-active-bg: #343a40;
 }
 .nav-pills .nav-link {
   background: none;
@@ -4585,8 +4585,8 @@ textarea.form-control-lg {
     --bs-pagination-focus-bg: #e9ecef;
     --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(100, 161, 157, 0.25);
     --bs-pagination-active-color: #fff;
-    --bs-pagination-active-bg: #a16468;
-    --bs-pagination-active-border-color: #a16468;
+    --bs-pagination-active-bg: #343a40;
+    --bs-pagination-active-border-color: #343a40;
     --bs-pagination-disabled-color: #6c757d;
     --bs-pagination-disabled-bg: #fff;
     --bs-pagination-disabled-border-color: #dee2e6;
@@ -4829,7 +4829,7 @@ textarea.form-control-lg {
     --bs-progress-border-radius: 0.375rem;
     --bs-progress-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
     --bs-progress-bar-color: #fff;
-    --bs-progress-bar-bg: #a16468;
+    --bs-progress-bar-bg: #343a40;
     --bs-progress-bar-transition: width 0.6s ease;
     display: flex;
     height: var(--bs-progress-height);
@@ -4886,8 +4886,8 @@ textarea.form-control-lg {
     --bs-list-group-disabled-color: #6c757d;
     --bs-list-group-disabled-bg: #fff;
     --bs-list-group-active-color: #fff;
-    --bs-list-group-active-bg: #a16468;
-    --bs-list-group-active-border-color: #a16468;
+    --bs-list-group-active-bg: #343a40;
+    --bs-list-group-active-border-color: #343a40;
     display: flex;
     flex-direction: column;
     padding-left: 0;
@@ -6823,7 +6823,7 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-    color: #a16468 !important;
+    color: #343a40 !important;
 }
 .link-primary:hover, .link-primary:focus {
   color: #50817e !important;
@@ -11000,12 +11000,12 @@ body {
         opacity: 1
     }
 }
-    #mainNav .navbar-toggler {
-        font-size: 80%;
-        padding: 0.75rem;
-        color: #a16468;
-        border: 1px solid #a16468;
-    }
+#mainNav .navbar-toggler {
+    font-size: 80%;
+    padding: 0.75rem;
+    color: #343a40;
+    border: 1px solid #343a40;
+}
 #mainNav .navbar-toggler:focus {
   outline: none;
 }
@@ -11059,15 +11059,15 @@ body {
     border-bottom: 0.25rem solid transparent;
   }
     #mainNav.navbar-shrink .nav-link:hover {
-        color: #a16468;
+        color: #343a40;
     }
   #mainNav.navbar-shrink .nav-link:active {
     color: #467370;
   }
     #mainNav.navbar-shrink .nav-link.active {
-        color: #a16468;
+        color: #343a40;
         outline: none;
-        border-bottom: 0.25rem solid #a16468;
+        border-bottom: 0.25rem solid #343a40;
     }
 }
 
@@ -11180,7 +11180,7 @@ body {
 @media (min-width: 992px) {
     .gallery-section .featured-text {
         padding: 0 0 0 2rem;
-        border-left: 0.5rem solid #a16468;
+        border-left: 0.5rem solid #343a40;
     }
 }
 .gallery-section .gallery-text {
@@ -11217,7 +11217,7 @@ body {
 }
     .contact-section .card {
         border: 0;
-        border-bottom: 0.25rem solid #a16468;
+        border-bottom: 0.25rem solid #343a40;
     }
 .contact-section .card h4, .contact-section .card .h4 {
   font-size: 0.8rem;
@@ -11227,7 +11227,7 @@ body {
 }
         .contact-section .card hr {
             opacity: 1;
-            border-color: #a16468;
+            border-color: #343a40;
             border-width: 0.25rem;
             width: 3rem;
         }
